--- a/package.json
+++ b/package.json
@@ -9,9 +9,35 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@google/generative-ai": "^0.24.0",
+    "@heroicons/react": "^2.2.0",
+    "@radix-ui/react-checkbox": "^1.1.4",
+    "@radix-ui/react-dialog": "^1.1.6",
+    "@radix-ui/react-dropdown-menu": "^2.1.6",
+    "@radix-ui/react-label": "^2.1.2",
+    "@radix-ui/react-progress": "^1.1.2",
+    "@radix-ui/react-slot": "^1.1.2",
+    "@tanstack/react-table": "^8.21.2",
+    "autoprefixer": "^10.4.21",
+    "axios": "^1.8.4",
+    "bcryptjs": "^3.0.2",
+    "class-variance-authority": "^0.7.1",
+    "clsx": "^2.1.1",
+    "lucide-react": "^0.484.0",
+    "mongodb": "^6.15.0",
+    "mongoose": "^8.13.0",
+    "next": "^15.2.4",
+    "next-auth": "^4.24.11",
+    "papaparse": "^5.5.2",
+    "plaid": "^31.1.0",
+    "razorpay": "^2.9.6",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
-    "next": "15.2.4"
+    "react-plaid-link": "^3.6.1",
+    "recharts": "^2.15.1",
+    "tailwind-merge": "^3.0.2",
+    "tw-animate-css": "^1.2.5",
+    "twilio": "^5.5.1"
   },
   "devDependencies": {
     "@tailwindcss/postcss": "^4",
