--- a/package.json
+++ b/package.json
@@ -31,13 +31,17 @@
     "papaparse": "^5.5.2",
     "plaid": "^31.1.0",
     "razorpay": "^2.9.6",
-    "react": "^19.0.0",
-    "react-dom": "^19.0.0",
+    "react": "^18.3.1",
+    "react-dom": "^18.3.1",
     "react-plaid-link": "^3.6.1",
     "recharts": "^2.15.1",
     "tailwind-merge": "^3.0.2",
     "tw-animate-css": "^1.2.5",
     "twilio": "^5.5.1"
+  },
+  "resolutions": {
+    "react": "^18.0.0",
+    "react-dom": "^18.0.0"
   },
   "devDependencies": {
     "@tailwindcss/postcss": "^4",
