--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "autoprefixer": "^10.4.21",
     "axios": "^1.8.4",
     "bcryptjs": "^3.0.2",
+    "chart.js": "^4.4.8",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "lucide-react": "^0.484.0",
@@ -34,6 +35,7 @@
     "plaid": "^31.1.0",
     "razorpay": "^2.9.6",
     "react": "^18.3.1",
+    "react-chartjs-2": "^5.3.0",
     "react-dom": "^18.3.1",
     "react-plaid-link": "^3.6.1",
     "recharts": "^2.15.1",
