--- a/package.json
+++ b/package.json
@@ -41,7 +41,8 @@
     "recharts": "^2.15.1",
     "tailwind-merge": "^3.0.2",
     "tw-animate-css": "^1.2.5",
-    "twilio": "^5.5.1"
+    "twilio": "^5.5.1",
+    "xlsx": "^0.18.5"
   },
   "resolutions": {
     "react": "^18.0.0",
