--- a/package.json
+++ b/package.json
@@ -26,6 +26,8 @@
     "chart.js": "^4.4.8",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
+    "date-fns": "^2.30.0",
+    "framer-motion": "^12.6.3",
     "lucide-react": "^0.484.0",
     "mongodb": "^6.15.0",
     "mongoose": "^8.13.0",
@@ -37,6 +39,7 @@
     "react": "^18.3.1",
     "react-chartjs-2": "^5.3.0",
     "react-dom": "^18.3.1",
+    "react-markdown": "^10.1.0",
     "react-plaid-link": "^3.6.1",
     "recharts": "^2.15.1",
     "tailwind-merge": "^3.0.2",
