--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@radix-ui/react-dialog": "^1.1.6",
     "@radix-ui/react-dropdown-menu": "^2.1.6",
     "@radix-ui/react-label": "^2.1.2",
+    "@radix-ui/react-popover": "^1.1.6",
     "@radix-ui/react-progress": "^1.1.2",
     "@radix-ui/react-select": "^2.1.6",
     "@radix-ui/react-slot": "^1.1.2",
@@ -28,8 +29,11 @@
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "date-fns": "^2.30.0",
+    "daterangepicker": "^3.1.0",
     "framer-motion": "^12.6.3",
+    "jquery": "^3.7.1",
     "lucide-react": "^0.484.0",
+    "moment": "^2.30.1",
     "mongodb": "^6.15.0",
     "mongoose": "^8.13.0",
     "next": "^15.2.4",
@@ -39,6 +43,7 @@
     "razorpay": "^2.9.6",
     "react": "^18.3.1",
     "react-chartjs-2": "^5.3.0",
+    "react-day-picker": "^8.10.1",
     "react-dom": "^18.3.1",
     "react-markdown": "^10.1.0",
     "react-plaid-link": "^3.6.1",
