--- a/model-training/cloudbuild.yaml
+++ b/model-training/cloudbuild.yaml
@@ -1,12 +1,15 @@
-options:
-  default_logs_bucket_behavior: REGIONAL_USER_OWNED_BUCKET
-
 steps:
-  # Build the Docker image and tag it.
   - name: "gcr.io/cloud-builders/docker"
-    args: ["build", "-t", "gcr.io/$PROJECT_ID/bank-tx-categorizer:latest", "."]
+    args:
+      [
+        "build",
+        "-f",
+        "docker/Dockerfile",
+        "-t",
+        "gcr.io/$PROJECT_ID/bank-tx-categorizer:latest",
+        ".",
+      ]
 
-  # Push the Docker image to Google Container Registry.
   - name: "gcr.io/cloud-builders/docker"
     args: ["push", "gcr.io/$PROJECT_ID/bank-tx-categorizer:latest"]
 
