--- a/model-training/cloudbuild.yaml
+++ b/model-training/cloudbuild.yaml
@@ -2,18 +2,14 @@ options:
   default_logs_bucket_behavior: REGIONAL_USER_OWNED_BUCKET
 
 steps:
+  # Build the Docker image using the Dockerfile in tarining-model/
   - name: "gcr.io/cloud-builders/docker"
-    args:
-      [
-        "build",
-        "-f",
-        "docker/Dockerfile",
-        "-t",
-        "gcr.io/$PROJECT_ID/bank-tx-categorizer:latest",
-        ".",
-      ]
+    dir: "tarining-model"
+    args: ["build", "-t", "gcr.io/$PROJECT_ID/bank-tx-categorizer:latest", "."]
 
+  # Push the Docker image to Container Registry
   - name: "gcr.io/cloud-builders/docker"
+    dir: "tarining-model"
     args: ["push", "gcr.io/$PROJECT_ID/bank-tx-categorizer:latest"]
 
 images:
