--- a/model-training/cloudbuild.yaml
+++ b/model-training/cloudbuild.yaml
@@ -2,14 +2,14 @@ options:
   default_logs_bucket_behavior: REGIONAL_USER_OWNED_BUCKET
 
 steps:
-  # Build the Docker image using the Dockerfile in tarining-model/
+  # Build the Docker image using the Dockerfile in training-model/
   - name: "gcr.io/cloud-builders/docker"
-    dir: "tarining-model"
+    dir: "training-model"
     args: ["build", "-t", "gcr.io/$PROJECT_ID/bank-tx-categorizer:latest", "."]
 
   # Push the Docker image to Container Registry
   - name: "gcr.io/cloud-builders/docker"
-    dir: "tarining-model"
+    dir: "training-model"
     args: ["push", "gcr.io/$PROJECT_ID/bank-tx-categorizer:latest"]
 
 images:
