--- a/backend/cloudbuild.yaml
+++ b/backend/cloudbuild.yaml
@@ -4,28 +4,32 @@ options:
 steps:
   # Step 1: Build the Docker image
   - name: "gcr.io/cloud-builders/docker"
+    dir: "backend"
     args: ["build", "-t", "gcr.io/$PROJECT_ID/fastapi-pdf-parser", "."]
 
   # Step 2: Push the Docker image to Google Container Registry
   - name: "gcr.io/cloud-builders/docker"
+    dir: "backend"
     args: ["push", "gcr.io/$PROJECT_ID/fastapi-pdf-parser"]
 
   # Step 3: Deploy the container to Cloud Run
   - name: "gcr.io/google.com/cloudsdktool/cloud-sdk"
-    entrypoint: "gcloud"
     args:
-      - "run"
-      - "deploy"
-      - "fastapi-pdf-parser"
-      - "--image"
-      - "gcr.io/$PROJECT_ID/fastapi-pdf-parser"
-      - "--platform"
-      - "managed"
-      - "--region"
-      - "us-central1" # Change if you're deploying to a different region
-      - "--memory"
-      - "1Gi" # Increased memory to prevent out-of-memory error
-      - "--allow-unauthenticated"
+      [
+        "gcloud",
+        "run",
+        "deploy",
+        "fastapi-pdf-parser",
+        "--image",
+        "gcr.io/$PROJECT_ID/fastapi-pdf-parser",
+        "--platform",
+        "managed",
+        "--region",
+        "us-central1",
+        "--memory",
+        "1Gi",
+        "--allow-unauthenticated",
+      ]
 
 images:
   - "gcr.io/$PROJECT_ID/fastapi-pdf-parser"
