--- a/backend/Dockerfile
+++ b/backend/Dockerfile
@@ -1,18 +1,17 @@
-# Use official Python image
 FROM python:3.9-slim
 
-# Set working directory
+ENV PYTHONDONTWRITEBYTECODE 1
+ENV PYTHONUNBUFFERED 1
+
 WORKDIR /app
 
-# Install dependencies
 COPY requirements.txt .
-RUN pip install --no-cache-dir -r requirements.txt
 
-# Copy app code
-COPY ./app /app
+RUN pip install --upgrade pip && \
+    pip install --no-cache-dir -r requirements.txt
 
-# Expose port
+COPY . .
+
 EXPOSE 8080
 
-# Command to run
 CMD ["uvicorn", "main:app", "--host", "0.0.0.0", "--port", "8080"]
