--- a/backend/Dockerfile
+++ b/backend/Dockerfile
@@ -14,4 +14,5 @@ COPY . .
 
 EXPOSE 8080
 
-CMD ["uvicorn", "main:app", "--host", "0.0.0.0", "--port", "8080"]
+CMD ["sh", "-c", "exec gunicorn -b 0.0.0.0:$PORT app:app"]
+
