--- a/package.json
+++ b/package.json
@@ -60,7 +60,8 @@
     "tw-animate-css": "^1.2.5",
     "twilio": "^5.5.1",
     "uuid": "^11.1.0",
-    "xlsx": "^0.18.5"
+    "xlsx": "^0.18.5",
+    "zod": "^3.24.2"
   },
   "resolutions": {
     "react": "^18.0.0",
