--- a/package.json
+++ b/package.json
@@ -41,6 +41,7 @@
     "mongoose": "^8.13.0",
     "next": "^15.2.4",
     "next-auth": "^4.24.11",
+    "next-themes": "^0.4.6",
     "papaparse": "^5.5.2",
     "pdf-parse": "^1.1.1",
     "pdf2pic": "^3.1.4",
@@ -55,6 +56,7 @@
     "react-markdown": "^10.1.0",
     "react-plaid-link": "^3.6.1",
     "recharts": "^2.15.1",
+    "sonner": "^2.0.3",
     "tailwind-merge": "^3.0.2",
     "tesseract.js": "^6.0.1",
     "tw-animate-css": "^1.2.5",
