--- a/package.json
+++ b/package.json
@@ -27,13 +27,13 @@
     "autoprefixer": "^10.4.21",
     "axios": "^1.8.4",
     "bcryptjs": "^3.0.2",
-    "chart.js": "^4.4.8",
+    "chart.js": "^4.4.9",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "date-fns": "^2.30.0",
     "daterangepicker": "^3.1.0",
     "formidable": "^3.5.2",
-    "framer-motion": "^12.6.3",
+    "framer-motion": "^12.7.4",
     "jquery": "^3.7.1",
     "lucide-react": "^0.484.0",
     "moment": "^2.30.1",
@@ -48,6 +48,7 @@
     "pdfjs-dist": "^5.1.91",
     "pdfreader": "^3.0.7",
     "plaid": "^31.1.0",
+    "rate-limiter-flexible": "^7.0.0",
     "razorpay": "^2.9.6",
     "react": "^18.3.1",
     "react-chartjs-2": "^5.3.0",
